# alpaca-rs

./: Cargo.toml  README.md
src/: client.rs  main.rs
src/model/: account.rs  error.rs  mod.rs  orders.rs
src/model/serde/: float.rs  float_optional.rs  mod.rs
