[package]
name = "alpaca-rs"
version = "0.1.0"
authors = ["jtm <noreply@jtm.cx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
url = "2.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
bytes = "0.5"
chrono = { version = "0.4", features = [ "serde" ] }
rug = { version = "1.7", features = [ "serde" ] }
ref-cast = "1.0"
reqwest = { version = "0.10", features = [ "json" ] }
simple-error = "0.2"
